Fix alignment of data in species table

--- a/app/assets/stylesheets/shared/layout.scss
+++ b/app/assets/stylesheets/shared/layout.scss
@@ -211,6 +211,12 @@ li.login > a:focus {
   width: 5%;
 }
 
+.col-48 {
+  float: left;
+  width: 48%;
+  padding: 0 15px;
+}
+
 .col-65 {
   float: left;
   width: 65%;
